--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,13 @@
           "node": "6"
         }
       }
+    ],
+    [
+      "@babel/preset-typescript",
+      {
+        "allowDeclareFields": true,
+        "onlyRemoveTypeImports": true
+      }
     ]
   ]
 }
