chore: add eslint-plugin-import ts settings
merge the settings from eslint-plugin-import/typescript preset with eslint-config-airbnb-base

https://github.com/benmosher/eslint-plugin-import/blob/4f1101e584558d9c686144b71222acaaf4f70b72/config/typescript.js

https://github.com/airbnb/javascript/blob/c5bee75b1b358a3749f1a6d38ee6fad73de28e29/packages/eslint-config-airbnb-base/rules/imports.js

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,23 @@
     "prettier/@typescript-eslint"
   ],
   "plugins": ["prettier", "jest"],
+  "settings": {
+    "import/core-modules": [],
+    "import/extensions": [".ts", ".tsx", ".d.ts", ".mjs", ".js", ".jsx"],
+    "import/external-module-folders": ["node_modules", "node_modules/@types"],
+    "import/ignore": [
+      "node_modules",
+      "\\.(coffee|scss|css|less|hbs|svg|json)$"
+    ],
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx", ".d.ts"]
+    },
+    "import/resolver": {
+      "node": {
+        "extensions": [".ts", ".tsx", ".d.ts", ".mjs", ".js", ".jsx"]
+      }
+    }
+  },
   "rules": {
     "no-underscore-dangle": "off",
     "max-classes-per-file": "off",
