--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "create-jest-runner",
   "version": "0.7.0",
   "main": "build/index.js",
-  "types": "types/index.d.ts",
+  "types": "build/index.d.ts",
   "author": "Rogelio Guzman <rogelioguzmanh@gmail.com>",
   "contributors": [
     {
@@ -28,6 +28,7 @@
     "prettier:write": "yarn prettier:run --write",
     "watch": "babel lib --ignore '**/*.test.js,integration' --out-dir build --extensions '.ts' --watch",
     "build": "babel lib --ignore '**/*.test.js,integration' --out-dir build --extensions '.ts'",
+    "build-types": "tsc",
     "prepare": "yarn build"
   },
   "dependencies": {
