--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -31,6 +31,8 @@ jobs:
         run: yarn
       - name: build
         run: yarn build
+      - name: build types
+        run: yarn build-types
       - name: run eslint
         run: yarn lint
       - name: run prettier
@@ -62,6 +64,8 @@ jobs:
         run: yarn
       - name: build
         run: yarn build
+      - name: build types
+        run: yarn build-types
       - name: run tests
         run: yarn test
         env:
@@ -92,6 +96,8 @@ jobs:
         run: yarn
       - name: build
         run: yarn build
+      - name: build types
+        run: yarn build-types
       - name: run tests
         run: yarn test
         env:
