--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,8 +8,9 @@
   ],
   "plugins": ["prettier", "jest"],
   "rules": {
-    "no-underscore-dangle": "off",
     "max-classes-per-file": "off",
+    "no-underscore-dangle": "off",
+    "no-useless-constructor": "off",
     "@typescript-eslint/prefer-ts-expect-error": "error",
     // TODO: turn on after migrating to TS
     "@typescript-eslint/no-var-requires": "off",
