chore: update import/extensions lint options
eslint-config-airbnb-base does not include .ts extension in this rule

https://github.com/airbnb/javascript/blob/c5bee75b1b358a3749f1a6d38ee6fad73de28e29/packages/eslint-config-airbnb-base/rules/imports.js#L139-L143

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,16 @@
   ],
   "plugins": ["prettier", "jest"],
   "rules": {
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "mjs": "never",
+        "jsx": "never",
+        "ts": "never"
+      }
+    ],
     "max-classes-per-file": "off",
     "no-underscore-dangle": "off",
     "no-useless-constructor": "off",
