chore: disable import/export lint
this rule does not understand ts function overloading

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
   ],
   "plugins": ["prettier", "jest"],
   "rules": {
+    "import/export": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
