chore: update watch script in package.json
Co-authored-by: Simen Bekkhus <sbekkhus91@gmail.com>

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prettier:run": "prettier '*.md' '.github/**' '*.json' '**/package.json' '.vscode/*.json' 'generator/fixtures/*'",
     "prettier:check": "yarn prettier:run --check",
     "prettier:write": "yarn prettier:run --write",
-    "watch": "babel lib --ignore '**/*.test.js,integration' --out-dir build --extensions '.ts' --watch",
+    "watch": "yarn build --watch",
     "build": "babel lib --ignore '**/*.test.js,integration' --out-dir build --extensions '.ts'",
     "build-types": "tsc",
     "prepare": "yarn build"
