chore: remove unnecessary onlyRemoveTypeImports in .babelrc

--- a/.babelrc
+++ b/.babelrc
@@ -11,8 +11,7 @@
     [
       "@babel/preset-typescript",
       {
-        "allowDeclareFields": true,
-        "onlyRemoveTypeImports": true
+        "allowDeclareFields": true
       }
     ]
   ],
